# rdb

./: Cargo.toml  README.md
src/: app.rs  duckdb.rs  main.rs  parquet.rs  postgres.rs  theme.rs  ui.rs
