[package]
name = "rdb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
chrono = "0.4"
duckdb = { version = "1.4", features = ["bundled"] }
parquet = "58.0.0"
polars = { version = "0.51", default-features = false, features = ["parquet", "csv", "fmt"] }
postgres = { version = "0.19", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
ratatui = "0.29"
rust_decimal = { version = "1", features = ["db-postgres"] }
serde_json = "1"
unicode-width = "0.2"
uuid = "1"
walkdir = "2.5"
